# mini_soc

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  SKILL.md  main.py  minisoc.service  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alerting/: notifier.py  responder.py  wazuh_ingest.py
ansible/: ansible.cfg  inventory.ini  playbook.yml
ansible/group_vars/: all.yml
ansible/roles/common/tasks/: main.yml
ansible/templates/: env.j2
collector/: probe.py
config/: loader.py  mitre_map.yaml  settings.yaml
dashboard/: topology.py
detection/: correlator.py  engine.py  enricher.py  mitre.py
docker/: .env.example  docker-compose.yml  generate-certs.yml
docker/suricata/: suricata.yaml
docker/suricata/rules/: custom.rules
docker/vector/: vector.toml
docker/wazuh/active-response/: block-ip.sh
docker/wazuh/agent/: ossec-agent.conf
docker/wazuh/config/: certs.yml
docker/wazuh/custom-rules/: local_rules.xml
docker/wazuh/integrations/: custom-minisoc.py
docker/zeek/: local.zeek
docker/zeek/scripts/: mitre-tagging.zeek
docs/: architecture.md  deployment.md  migration.md  runbook.md  scenarios.md
examples/: anomaly_zscore.py
pipeline/: queue.py  schema.py
scenarios/: EXPECTED_DETECTIONS.md  Makefile  beacon.py  bruteforce.sh  portscan.sh  sqli.sh  wordlist-mini.txt
storage/: influx.py  sqlite_db.py
tests/: conftest.py  test_correlator.py  test_dashboard_auth.py  test_enricher.py  test_loader.py  test_mitre.py  test_notifier.py  test_responder.py  test_schema.py  test_sqlite_db.py  test_wazuh_ingest.py
(+16 files in other folders)
