[project]
name = "mini-soc"
version = "2.0.0"
description = "Mini-SOC — SOC auto-hébergé (Suricata + Zeek + Wazuh + corrélation MITRE) sur Ubuntu"
requires-python = ">=3.10"

[tool.ruff]
line-length = 110
target-version = "py310"
exclude = [".venv", "venv", "examples", "data", "logs"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = [
    "E501",  # longueur de ligne gérée par line-length
    "B008",  # appels dans les valeurs par défaut (OK pour nos factory)
]

[tool.ruff.lint.per-file-ignores]
# main.py charge la config et configure le logging avant d'importer les modules
# applicatifs : les imports ne peuvent pas être tout en haut.
"main.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]
